Generate schema and queries in different files

--- a/internal/gen/crud.tmpl
+++ b/internal/gen/crud.tmpl
@@ -1,24 +1,12 @@
-CREATE TABLE {{.GoIdent.GoName | snakecase}} (
-  {{ $length := len .Fields -}}
-  {{range $i, $e := .Fields -}}
-    {{if eq .Desc.Kind 9 -}}{{.Desc.Name }} text{{end -}}
-    {{if eq .Desc.Kind 5 -}}{{.Desc.Name }} integer{{end -}}
-    {{ $ii := $i | add1 -}}
-    {{if eq $ii $length -}}
-    {{else}},
-  {{end -}}
-  {{end}}
-);
-
 -- name: Get{{.GoIdent.GoName}} :one
-SELECT * FROM {{.GoIdent.GoName | snakecase}}
+SELECT * FROM {{.GoIdent.GoName | snakecase}}s
 WHERE uid = $1 LIMIT 1;
 
 -- name: List{{.GoIdent.GoName}}s :many
-SELECT * FROM {{.GoIdent.GoName | snakecase}};
+SELECT * FROM {{.GoIdent.GoName | snakecase}}s;
 
 -- name: Create{{.GoIdent.GoName}} :one
-INSERT INTO {{.GoIdent.GoName | snakecase}} (
+INSERT INTO {{.GoIdent.GoName | snakecase}}s (
   {{ $length := len .Fields -}}
   {{range $i, $e := .Fields -}}
     {{.Desc.Name -}}
@@ -38,7 +26,7 @@ INSERT INTO {{.GoIdent.GoName | snakecase}} (
 RETURNING *;
 
 -- name: Update{{.GoIdent.GoName}} :one
-UPDATE {{.GoIdent.GoName | snakecase}} SET
+UPDATE {{.GoIdent.GoName | snakecase}}s SET
   {{ $length := len .Fields -}}
   {{range $i, $e := .Fields -}}
     {{ $ii := $i | add1 -}}
@@ -50,5 +38,5 @@ WHERE uid = $1
 RETURNING *;
 
 -- name: Delete{{.GoIdent.GoName}} :exec
-DELETE FROM {{.GoIdent.GoName | snakecase}}
+DELETE FROM {{.GoIdent.GoName | snakecase}}s
 WHERE uid = $1;
